--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -24,7 +24,7 @@
                     <h4> Inscribase llenando aquí</h4>
 
                     <div class="form-input">
-                        <label>Nombre:</label>
+                        <label>Nombre1:</label>
                         <input type="text" placeholder="Tu nombre"/>
                     </div>
                     <div class="form-input">
