--- a/index.html
+++ b/index.html
@@ -9,41 +9,74 @@
     <link href="./css/styles.css" rel="stylesheet" type="text/css" />
     <title>Ciclismo</title>
   </head>
-
   <body>
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand">Inicio</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="./pages/ilgiro.html"
+                >Giro de Italia</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/lavuelta.html">La Vuelta</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/tourthefrance.html"
+                >Tour de France</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/contacto.html"
+                >Contacto</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <header>
       <h1>LAS GRANDES VUELTAS</h1>
     </header>
-    <a class="boton" href="./pages/contacto.html">Contacto</a>
     <main>
       <section class="carrera">
-        <h2>Informacion</h2>
         <div class="nav-bg">
           <nav class="contenedor">
             <div class="row">
               <div class="col-xs-12 col-lg-4 logos">
                 <div class="card">
-                  <a class="menu2 card-title" href="./pages/ilgiro.html"
-                    >Giro de Italia</a
-                  >
+                  <a class="menu2 card-title"></a>
                   <img src="./images/giro de italia.jpg" alt="Giro de Italia" />
                 </div>
                 <div class="row"></div>
               </div>
               <div class="col-xs-12 col-lg-4 logos">
                 <div class="card">
-                  <a class="menu2 card-title" href="./pages/lavuelta.html"
-                    >La vuelta de España</a
-                  >
+                  <a class="menu2 card-title"></a>
                   <img src="./images/lavuelta.jpg" />
                 </div>
                 <div class="row"></div>
               </div>
               <div class="col-xs-12 col-lg-4 logos">
                 <div class="card">
-                  <a class="menu2 card-title" href="./pages/tourthefrance.html"
-                    >El Tour de France</a
-                  >
+                  <a class="menu2 card-title"></a>
                   <img src="./images/tourthefrance.jpg" />
                 </div>
                 <div class="row"></div>
@@ -101,7 +134,7 @@
         </ul>
       </div>
     </articl>
-
+<div>
     <footer>
       <div class="redes">
         <img src="./images/facebook.png" />
