--- a/pages/ilgiro.html
+++ b/pages/ilgiro.html
@@ -10,19 +10,47 @@
     <title>Elgiro</title>
   </head>
   <body>
+    <nav>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html">Inicio</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="../pages/contacto.html"
+                  >Contacto</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/lavuelta.html">La Vuelta</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/tourthefrance.html"
+                  >Tour the France</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </nav>
     <header>
       <h1>Grandes Vueltas del Ciclismo</h1>
     </header>
-    <nav>
-      <ul>
-        <li>
-          <a class="menu2" href="../index.html">Pagina inicial</a>
-        </li>
-        <li>
-          <a class="menu2" href="/pages/contacto.html">Contacto</a>
-        </li>
-      </ul>
-    </nav>
     <main>
       <h1>GIRO DE ITALIA</h1>
       <p>
