--- a/pages/lavuelta.html
+++ b/pages/lavuelta.html
@@ -1,53 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/css/styles.css" rel="stylesheet" type="text/css">
-    <title>Lavuelta</title>
-</head>
-<body>
-    <header>
-        <h1>Grandes Vueltas del Ciclismo</h1>
-    </header>
-    <nav> 
-        <ul>
-        <li>
-        <a class="menu2" href="../index.html">Pagina inicial</a>
-        </li>
-        <li>
-        <a  class="menu2" href="/pages/contacto.html">Contacto</a>
-        </li>
-    </ul>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/bootstrap.min.css" />
+    <script src="../js/bootstrap.min.js"></script>
+    <link href="/css/styles.css" rel="stylesheet" type="text/css" />
+    <title>La Vuelta</title>
+  </head>
+  <body>
+    <nav>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html">Inicio</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="../pages/contacto.html"
+                  >Contacto</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/ilgiro.html"
+                  >Giro de Italia</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/tourthefrance.html"
+                  >Tour the France</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </nav>
+    <header>
+      <h1>Grandes Vueltas del Ciclismo</h1>
+    </header>
     <main>
-        <h1>La Vuelta de Espania</h1>
-    <p>
-    La Vuelta Ciclista a España, también conocida como la Vuelta a España o simplemente La Vuelta, es una carrera por etapas profesional de ciclismo en ruta masculino disputada a lo largo de la geografía española, entre finales de agosto y mediados de septiembre. Es una de las tres Grandes Vueltas y pertenece al calendario UCI WorldTour.
-    </p>
-    <h2>La primera edicion</h2>
-    <p>
-        La Vuelta se disputó por primera vez en 1935. Desde su creación, la carrera ha sido suspendida en cuatro ocasiones: desde 1937 hasta 1940 debido a la guerra civil española, desde 1943 hasta 1944 debido a la Segunda Guerra Mundial y a la mala situación económica de España, en 1949 y desde 1951 hasta 1954
-    </p>
-    <h2> Camiseta de lideres</h2>
-    <p>
-    Los líderes de las distintas clasificaciones suplementarias también llevan maillots identificativos desde 1950 (con anterioridad, aún existiendo una clasificación de la montaña oficial, no se distinguía al líder de la misma). El color azul estuvo durante bastante tiempo asociado al líder de la clasificación por puntos y el color verde al líder de la clasificación de la montaña (en algunas ediciones su coloración fue roja o granate). El color rojo se asoció durante bastantes años al liderato en la clasificación de las metas volantes. Otras clasificaciones que han existido durante la disputa de la ronda española, como los sprints especiales o la combinada, tuvieron diferentes maillots dependiendo de la edición. Desde 1994 y hasta el 2009 (ambos inclusive), el maillot de la regularidad (o por puntos) pasó a tener una tonalidad granate, mientras que el maillot de la montaña, pasó a ser blanco.
-    </p>
+      <h1>La Vuelta de España</h1>
+      <p>
+        La Vuelta Ciclista a España, también conocida como la Vuelta a España o
+        simplemente La Vuelta, es una carrera por etapas profesional de ciclismo
+        en ruta masculino disputada a lo largo de la geografía española, entre
+        finales de agosto y mediados de septiembre. Es una de las tres Grandes
+        Vueltas y pertenece al calendario UCI WorldTour.
+      </p>
+      <h2>La primera edicion</h2>
+      <p>
+        La Vuelta se disputó por primera vez en 1935. Desde su creación, la
+        carrera ha sido suspendida en cuatro ocasiones: desde 1937 hasta 1940
+        debido a la guerra civil española, desde 1943 hasta 1944 debido a la
+        Segunda Guerra Mundial y a la mala situación económica de España, en
+        1949 y desde 1951 hasta 1954
+      </p>
+      <h2>Camiseta de lideres</h2>
+      <p>
+        Los líderes de las distintas clasificaciones suplementarias también
+        llevan maillots identificativos desde 1950 (con anterioridad, aún
+        existiendo una clasificación de la montaña oficial, no se distinguía al
+        líder de la misma). El color azul estuvo durante bastante tiempo
+        asociado al líder de la clasificación por puntos y el color verde al
+        líder de la clasificación de la montaña (en algunas ediciones su
+        coloración fue roja o granate). El color rojo se asoció durante
+        bastantes años al liderato en la clasificación de las metas volantes.
+        Otras clasificaciones que han existido durante la disputa de la ronda
+        española, como los sprints especiales o la combinada, tuvieron
+        diferentes maillots dependiendo de la edición. Desde 1994 y hasta el
+        2009 (ambos inclusive), el maillot de la regularidad (o por puntos) pasó
+        a tener una tonalidad granate, mientras que el maillot de la montaña,
+        pasó a ser blanco.
+      </p>
     </main>
     <section>
-    <div class="logos">
-        <img src="/images/vueltalider.jpg">
-        <img src="/images/vueltaespañavelocista.jpg">
-        <img src="/images/vueltalidermontaña.jpg">
-    </div>
+      <div class="logos">
+        <img src="/images/vueltalider.jpg" />
+        <img src="/images/vueltaespañavelocista.jpg" />
+        <img src="/images/vueltalidermontaña.jpg" />
+      </div>
     </section>
     <footer>
-        <div class="redes">
-    <img src="/images/facebook.png">
-    <img src="/images/gorjeo.png">
-    <img src="/images/instagram.png">
-</div>
+      <div class="redes">
+        <img src="/images/facebook.png" />
+        <img src="/images/gorjeo.png" />
+        <img src="/images/instagram.png" />
+      </div>
     </footer>
-</body>
+  </body>
 </html>
