--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-Us-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <script src="./js/bootstrap.min.js"></script>
-    <link href="./css/styles.css" rel="stylesheet" type="text/css" />
+    <script src="../js/bootstrap.min.js"></script>
+    <link href="../css/styles.css" rel="stylesheet" type="text/css" />
     <title>Ciclismo</title>
   </head>
   <body>
