--- a/pages/tourthefrance.html
+++ b/pages/tourthefrance.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/bootstrap.min.css" />
     <script src="../js/bootstrap.min.js"></script>
-    <link href="/css/styles.css" rel="stylesheet" type="text/css" />
+    <link href="../css/styles.css" rel="stylesheet" type="text/css" />
     <title>El Tour de France</title>
   </head>
   <body>
