--- a/pages/ilgiro.html
+++ b/pages/ilgiro.html
@@ -101,7 +101,7 @@
                   <div class="carousel-item active">
                     <div class="row justify-content-center">
                       <img
-                        src="/images/magliaciclocamino.jpg"
+                        src="../images/magliaciclocamino.jpg"
                         class="d-block w-50"
                       />
                     </div>
@@ -109,7 +109,7 @@
                   <div class="carousel-item">
                     <div class="row justify-content-center">
                       <img
-                        src="/images/magliaazzurra.jpg"
+                        src="../images/magliaazzurra.jpg"
                         class="d-block w-50"
                       />
                     </div>
@@ -117,7 +117,7 @@
                   <div class="carousel-item">
                     <div class="row justify-content-center">
                       <img
-                        src="/images/magliablanca.jpg"
+                        src="../images/magliablanca.jpg"
                         class="d-block w-50"
                       />
                     </div>
@@ -155,9 +155,9 @@
     </main>
     <footer>
       <div class="redes">
-        <img src="/images/facebook.png" />
-        <img src="/images/gorjeo.png" />
-        <img src="/images/instagram.png" />
+        <img src="../images/facebook.png" />
+        <img src="../images/gorjeo.png" />
+        <img src="../images/instagram.png" />
       </div>
     </footer>
   </body>
