--- a/pages/lavuelta.html
+++ b/pages/lavuelta.html
@@ -90,16 +90,16 @@
     </main>
     <section>
       <div class="logos">
-        <img src="/images/vueltalider.jpg" />
-        <img src="/images/vueltaespañavelocista.jpg" />
-        <img src="/images/vueltalidermontaña.jpg" />
+        <img src="../images/vueltalider.jpg" />
+        <img src="../images/vueltaespañavelocista.jpg" />
+        <img src="../images/vueltalidermontaña.jpg" />
       </div>
     </section>
     <footer>
       <div class="redes">
-        <img src="/images/facebook.png" />
-        <img src="/images/gorjeo.png" />
-        <img src="/images/instagram.png" />
+        <img src="../images/facebook.png" />
+        <img src="../images/gorjeo.png" />
+        <img src="../images/instagram.png" />
       </div>
     </footer>
   </body>
