--- a/pages/tourthefrance.html
+++ b/pages/tourthefrance.html
@@ -92,18 +92,18 @@
     </main>
     <section>
       <div class="logos">
-        <img src="/images/lidertour.jpg" />
-        <img src="/images/lidermontañatour.jpg" />
-        <img src="/images/mejorjoven.jpg" />
-        <img src="/images/lidersprint.jpg" />
+        <img src="../images/lidertour.jpg" />
+        <img src="../images/lidermontañatour.jpg" />
+        <img src="../images/mejorjoven.jpg" />
+        <img src="../images/lidersprint.jpg" />
       </div>
     </section>
 
     <footer>
       <div class="redes">
-        <img src="/images/facebook.png" />
-        <img src="/images/gorjeo.png" />
-        <img src="/images/instagram.png" />
+        <img src="../images/facebook.png" />
+        <img src="../images/gorjeo.png" />
+        <img src="../images/instagram.png" />
       </div>
     </footer>
   </body>
